--- a/style.css
+++ b/style.css
@@ -103,20 +103,29 @@ h1 {
     word-wrap: break-word;
     color: green;
     width:100%;
+	background-color: #ddd;
+	border:2px;
+	border-color:black;
 }
 .clublink-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  padding: 5px;
   z-index: 1;
 }
-.clublink:hover {
+.clublink:hover{
     background-color: green;
     color: white;
+}
+.clublink:hover .clublink-content{
+    background-color: #ffffff;
+    color: white;
     display: block;
+}
+.clubButtons {
+	padding-top: 10px;
 }
 a:link {
     text-decoration: none;
