--- a/test/style.css
+++ b/test/style.css
@@ -85,8 +85,7 @@ h1 {
   color: green;
   width: 100%;
   background-color: #ddd;
-  border: 2px font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-  ;
+  border: 2px;
 }
 
 .clublink-content {
@@ -109,6 +108,7 @@ h1 {
 
 .clubButtons {
   padding-top: 10px;
+  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 }
 
 a:link {
