--- a/test/style.css
+++ b/test/style.css
@@ -87,6 +87,7 @@ h1 {
   background-color: #ddd;
   border: 2px;
   font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+  font-weight: bold;
 }
 
 .clublink-content {
