--- a/new/views/home.html
+++ b/new/views/home.html
@@ -27,8 +27,8 @@
       </div>
 
       <div class="navigation">
-        <table width="100%">
-          <tr width="100%">
+        <table>
+          <tr>
             <th width="16.66%">
               <div class="clublink">
                 <span>
