--- a/new/views/home.html
+++ b/new/views/home.html
@@ -52,25 +52,34 @@
                 </span>
                 <div class="clublink-content">
                   <div class="clubsublink">
-                  <button class="clublink"> Performing Arts <i class="fas fa-caret-right"></i></button><br>
-                  <div class="clublink-subcontent">
-                    <button onclick="percussionEnsemble()" class="clublink"> Percussion Ensemble </button><br>
-                    <button onclick="jazzBand()" class="clublink"> Jazz Band </button><br>
-                    <button onclick="soundWaves()" class="clublink"> Soundwaves </button><br>
-                    <button onclick="dramaClub()" class="clublink"> Drama Club </button><br>
-                    <button onclick="colorGuard()" class="clublink"> Marching Band & Color Guard </button><br>
-                    <button onclick="winterGuard()" class="clublink"> Winter Guard </button><br>
-                    <button onclick="varietyShow()" class="clublink"> Variety Show </button><br>
+                    <button class="clublink"> Performing Arts <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="percussionEnsemble()" class="clublink"> Percussion Ensemble </button><br>
+                      <button onclick="jazzBand()" class="clublink"> Jazz Band </button><br>
+                      <button onclick="soundWaves()" class="clublink"> Soundwaves </button><br>
+                      <button onclick="dramaClub()" class="clublink"> Drama Club </button><br>
+                      <button onclick="colorGuard()" class="clublink"> Marching Band & Color Guard </button><br>
+                      <button onclick="winterGuard()" class="clublink"> Winter Guard </button><br>
+                      <button onclick="varietyShow()" class="clublink"> Variety Show </button><br>
+                    </div>
                   </div>
-                </div>
-                  <button onclick="theTide()" class="clublink"> The Tide </button><br>
-                  <button onclick="TGC()" class="clublink"> Traditional Gaming Club </button><br>
-                  <button onclick="WAC()" class="clublink"> Worlds Arts Club </button><br>
-                  <button onclick="photographyClub()" class="clublink"> Photography Club </button><br>
-                  <button onclick="latinClub()" class="clublink"> Latin Club </button><br>
-                  <button onclick="frenchClub()" class="clublink"> French Club </button><br>
-                  <button onclick="spanishClub()" class="clublink"> Spanish Club </button><br>
-                  <button onclick="ffa()" class="clublink"> Future Farmers of America </button><br>
+                  <div class="clubsublink">
+                    <button class="clublink"> Language Arts <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="latinClub()" class="clublink"> Latin Club </button><br>
+                      <button onclick="frenchClub()" class="clublink"> French Club </button><br>
+                      <button onclick="spanishClub()" class="clublink"> Spanish Club </button><br>
+                    </div>
+                  </div>
+                  <div class="clubsublink">
+                    <button class="clublink"> Visual Arts <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="theTide()" class="clublink"> The Tide </button><br>
+                      <button onclick="TGC()" class="clublink"> Traditional Gaming Club </button><br>
+                      <button onclick="WAC()" class="clublink"> Worlds Arts Club </button><br>
+                      <button onclick="photographyClub()" class="clublink"> Photography Club </button><br>
+                    </div>
+                  </div>
                 </div>
               </div>
             </th>
@@ -91,6 +100,7 @@
                   <button onclick="gsa()" class="clublink"> Gay Staight Alliance </button><br>
                   <button onclick="projectSearch()" class="clublink"> Project SEARCH </button><br>
                   <button onclick="YtY()" class="clublink"> Youth-to-Youth </button><br>
+                                    <button onclick="ffa()" class="clublink"> Future Farmers of America </button><br>
                   <button onclick="StudentGov()" class="clublink"> Student Government </button><br>
                 </div>
               </div>
