--- a/new/views/index.html
+++ b/new/views/index.html
@@ -13,7 +13,7 @@
   <div class="pagebackground">
     <div class="textfield">
       <div class="header">
-        <a href="home.html">
+        <a href="index.html">
           <h1>
 
             Dover Community
