Finished Dropdown Subgroupings.
Track team???? Tennis???

--- a/new/views/index.html
+++ b/new/views/index.html
@@ -37,10 +37,9 @@
                 <div class="clublink-content">
                   <button onclick="interactClub()" class="clublink"> Interact Club </button><br>
                   <button onclick="keyClub()" class="clublink"> Key Club </button><br>
-                  <button onclick="NHS()" class="clublink"> National Honors Society </button><br>
-                  <button onclick="athleticLeadershipCouncil()" class="clublink"> Athletic Leadership </button><br>
+
                   <button onclick="earthAction()" class="clublink"> Earth Action </button><br>
-                  <button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+
                 </div>
               </div>
             </th>
@@ -83,7 +82,6 @@
                 </div>
               </div>
             </th>
-
             <th width="16.66%">
               <div class="clublink">
                 <span>
@@ -91,17 +89,34 @@
                     Leadership Clubs
                   </p>
                 </span>
-
                 <div class="clublink-content">
-                  <button onclick="classOf2019()" class="clublink"> Class of 2019 </button><br>
-                  <button onclick="classOf2020()" class="clublink"> Class of 2020 </button><br>
-                  <button onclick="classOf2021()" class="clublink"> Class of 2021 </button><br>
-                  <button onclick="classOf2022()" class="clublink"> Class of 2022 </button><br>
-                  <button onclick="gsa()" class="clublink"> Gay Staight Alliance </button><br>
-                  <button onclick="projectSearch()" class="clublink"> Project SEARCH </button><br>
-                  <button onclick="YtY()" class="clublink"> Youth-to-Youth </button><br>
-                                    <button onclick="ffa()" class="clublink"> Future Farmers of America </button><br>
-                  <button onclick="StudentGov()" class="clublink"> Student Government </button><br>
+                  <div class="clubsublink">
+                    <button class="clublink"> Student Body <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="classOf2019()" class="clublink"> Class of 2019 </button><br>
+                      <button onclick="classOf2020()" class="clublink"> Class of 2020 </button><br>
+                      <button onclick="classOf2021()" class="clublink"> Class of 2021 </button><br>
+                      <button onclick="classOf2022()" class="clublink"> Class of 2022 </button><br>
+                      <button onclick="StudentGov()" class="clublink"> Student Government </button><br>
+                    </div>
+                  </div>
+                  <div class="clubsublink">
+                    <button class="clublink"> Academic Leadership <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="NHS()" class="clublink"> National Honors Society </button><br>
+                      <button onclick="athleticLeadershipCouncil()" class="clublink"> Athletic Leadership </button><br>
+                      <button onclick="TNHS()" class="clublink"> NH Technical Honors Society </button><br>
+                    </div>
+                  </div>
+                  <div class="clubsublink">
+                    <button class="clublink"> Leadership in the Community <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="gsa()" class="clublink"> Gay Staight Alliance </button><br>
+                      <button onclick="projectSearch()" class="clublink"> Project SEARCH </button><br>
+                      <button onclick="YtY()" class="clublink"> Youth-to-Youth </button><br>
+                      <button onclick="ffa()" class="clublink"> Future Farmers of America </button><br>
+                    </div>
+                  </div>
                 </div>
               </div>
             </th>
@@ -131,21 +146,41 @@
                 </span>
 
                 <div class="clublink-content">
+                  <div class="clubsublink">
+                    <button class="clublink"> Basketball <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="boysBasketball()" class="clublink"> Boys Basketball </button><br>
+                      <button onclick="girlsBasketball()" class="clublink"> Girls Basketball </button><br>
+                    </div>
+                  </div>
+                  <div class="clubsublink">
+                    <button class="clublink"> Hockey <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="girlsFieldHockey()" class="clublink"> Field Hockey </button><br>
+                      <button onclick="girlsIceHockey()" class="clublink"> Girls Ice Hockey </button><br>
+                      <button onclick="boysIceHockey()" class="clublink"> Boys Ice Hockey </button><br>
+                    </div>
+                  </div>
+                  <div class="clubsublink">
+                    <button class="clublink"> Soccer <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="boysSoccer()" class="clublink"> Boys Soccer </button><br>
+                      <button onclick="girlsSoccer()" class="clublink"> Girls Soccer </button><br>
+                    </div>
+                  </div>
+                  <div class="clubsublink">
+                    <button class="clublink"> Volleyball <i class="fas fa-caret-right"></i></button><br>
+                    <div class="clublink-subcontent">
+                      <button onclick="boysVolleyball()" class="clublink"> Boys Volleyball </button><br>
+                      <button onclick="girlsVolleyball()" class="clublink"> Girls Volleyball </button><br>
+                    </div>
+                  </div>
                   <button onclick="baseball()" class="clublink"> Baseball </button><br>
-                  <button onclick="boysBasketball()" class="clublink"> Boys Basketball </button><br>
                   <button onclick="boysFootball()" class="clublink"> Football </button><br>
-                  <button onclick="boysIceHockey()" class="clublink"> Boys Ice Hockey </button><br>
                   <button onclick="boysLacrosse()" class="clublink"> Lacrosse </button><br>
-                  <button onclick="boysSoccer()" class="clublink"> Boys Soccer </button><br>
-                  <button onclick="boysVolleyball()" class="clublink"> Boys Volleyball </button><br>
                   <button onclick="boysWrestling()" class="clublink"> Wrestling </button><br>
-                  <button onclick="girlsBasketball()" class="clublink"> Girls Basketball </button><br>
-                  <button onclick="girlsFieldHockey()" class="clublink"> Field Hockey </button><br>
-                  <button onclick="girlsIceHockey()" class="clublink"> Girls Ice Hockey </button><br>
-                  <button onclick="girlsSoccer()" class="clublink"> Girls Soccer </button><br>
                   <button onclick="softball()" class="clublink"> Softball </button><br>
                   <button onclick="cheer()" class="clublink"> Cheer </button><br>
-                  <button onclick="girlsVolleyball()" class="clublink"> Girls Volleyball </button><br>
                   <button onclick="crossCountry()" class="clublink"> Cross Country </button><br>
                   <button onclick="golf()" class="clublink"> Golf </button><br>
                   <button onclick="bowling()" class="clublink"> Bowling </button><br>
