Addition of Social Media Buttons
ooooo

--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -211,3 +211,12 @@ a:active {
 	border: 0px;
 	border-radius: 0px 0px 5px 5px;
 }
+
+#socialmedia {
+	position: relative;
+	float: right;
+	padding: 20px;
+  font-size: 40px;
+  width: 50px;
+	color: white;
+}
