--- a/new/views/index.html
+++ b/new/views/index.html
@@ -216,6 +216,7 @@
       <div class="footerA">
         <div class="footerB">
           <div class="footerC">
+            <i id="socialmedia" class="fab fa-instagram"></i> <i id="socialmedia" class="fab fa-twitter-square"></i> <i id="socialmedia" class="fab fa-facebook"></i> <i id="socialmedia" class="fab fa-snapchat-square"></i> <i id="socialmedia" class="fab fa-youtube"></i>
 
           </div>
         </div>
