--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -1,3 +1,7 @@
+body {
+	background-image: linear-gradient(green, white);
+	background-repeat: no-repeat;
+}
 h1 {
 	font-family: verdana;
 	font-size: 62px;
@@ -13,7 +17,6 @@ h1 {
 	min-width: 1025px;
 	margin: auto;
 	height: 100%;
-	background: linear-gradient(green, white)
 }
 
 .header {
