making them work
someone needs to put the right links in though

--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -219,4 +219,16 @@ a:active {
   font-size: 40px;
   width: 50px;
 	color: white;
+	transition: 1s;
+
+}
+#socialmedia:hover {
+	position: relative;
+	float: right;
+	padding: 20px;
+  font-size: 40px;
+  width: 50px;
+	color: grey;
+	cursor: pointer;
+	transition: 1s;
 }
