--- a/new/views/index.html
+++ b/new/views/index.html
@@ -216,8 +216,8 @@
       <div class="footerA">
         <div class="footerB">
           <div class="footerC">
-            <i id="socialmedia" class="fab fa-instagram"></i> <i id="socialmedia" class="fab fa-twitter-square"></i> <i id="socialmedia" class="fab fa-facebook"></i> <i id="socialmedia" class="fab fa-snapchat-square"></i> <i id="socialmedia" class="fab fa-youtube"></i>
-
+            <a href="https:www.insertlinkhere.com"><i id="socialmedia" class="fab fa-instagram"></i></a> <a href="https:www.insertlinkhere.com"><i id="socialmedia" class="fab fa-twitter-square"></i></a> <a href="https:www.insertlinkhere.com"><i id="socialmedia" class="fab fa-facebook"></i></a> <a href="https:www.insertlinkhere.com"><i id="socialmedia" class="fab fa-snapchat-square"></i></a> <a href="https:www.insertlinkhere.com"><i id="socialmedia" class="fab fa-youtube"></i></a>
+			
           </div>
         </div>
       </div>
