--- a/new/views/index.html
+++ b/new/views/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Dover Community Outreach Network</title>
+  <script src="../static/js/pages.txt"></script>
   <script src="../app/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="../static/js/pages.js" type="text/javascript" charset="utf-8"></script>
   <script src="../static/js/control.js" type="text/javascript" charset="utf-8"></script>
@@ -216,6 +217,8 @@
       </div>
     </div>
 
+  </div>
+  <div id="getText">
   </div>
 
 </body>
