--- a/new/views/index.html
+++ b/new/views/index.html
@@ -204,7 +204,7 @@
 
       <div class="content">
         <p id="ClubName">Title</p>
-        <p id="Description">Put stuff here</p>
+        <div id="Description">Put stuff here</div>
       </div>
 
       <div class="footerA">
