--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -76,7 +76,9 @@ h1 {
 }
 
 #Description {
-	font-size: 25;
+	color: green;
+	font-size: 30px;
+	font-weight: bold;
 	font-family: times new roman;
 }
 
