--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -71,13 +71,13 @@ h1 {
 	color: green;
 	text-align: center;
 	font-family: verdana;
-	font-size: 30px;
+	font-size: 30;
 	font-weight: bold;
 }
 
 #Description {
 	color: green;
-	font-size: 30px;
+	font-size: 30;
 	font-weight: bold;
 	font-family: times new roman;
 }
