Make image look nicer?

--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -82,6 +82,12 @@ h1 {
 	font-family: times new roman;
 }
 
+#ucBanner {
+	width: auto;
+	height: auto;
+	align-content: center;
+}
+
 .clublink {
 	margin: auto;
 	height: 45px;
