--- a/new/views/index.html
+++ b/new/views/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Dover Community Outreach Network</title>
-  <script src="../app/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../static/js/control.js" type="text/javascript" charset="utf-8"></script>
-  <link href="../static/css/style.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>Dover Community Outreach Network</title>
+	<script src="../app/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../static/js/control.js" type="text/javascript" charset="utf-8"></script>
+	<link href="../static/css/style.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+	<script type="text/javascript">
+		(function(){
+			emailjs.init("user_D2R6i9qtAmy6zkAxgPCw7");
+		})();
+	</script>
 </head>
 
 <body>
