Adding Important News Files

--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -281,3 +281,23 @@ a:active {
 	margin-left: 2em;
 	font-size: 1em;
 }
+.news{
+border: none;
+overflow:hidden;
+}
+.news2{
+border: 5px;
+border-style: solid;
+border-color: #000000;
+border-radius:5px;
+background-color: #c6cad1;
+width: 300px
+
+}
+.newsheader{
+text-align: center;
+background: rgb(214, 214, 214);
+margin: 7px;
+font-size: 20px;
+border-radius:2px;
+}
