--- a/new/views/index.html
+++ b/new/views/index.html
@@ -60,8 +60,8 @@
                   <div class="clubsublink">
                     <button class="clublink"> Performing Arts <i class="fas fa-caret-right"></i></button><br>
                     <div class="clublink-subcontent">
-                      <button onclick="window.location.href='./?page=window.location.href='./?page=percussionEnsemble'" class="clublink"> Percussion Ensemble </button><br>
-                      <button onclick="window.location.href='./?page=window.location.href='./?page=jazzBand'" class="clublink"> Jazz Band </button><br>
+                      <button onclick="window.location.href='./?page=percussionEnsemble'" class="clublink"> Percussion Ensemble </button><br>
+                      <button onclick="window.location.href='./?page=jazzBand'" class="clublink"> Jazz Band </button><br>
                       <button onclick="window.location.href='./?page=soundWaves'" class="clublink"> Soundwaves </button><br>
                       <button onclick="window.location.href='./?page=dramaClub'" class="clublink"> Drama Club </button><br>
                       <button onclick="window.location.href='./?page=colorGuard'" class="clublink"> Marching Band & Color Guard </button><br>
