--- a/new/static/css/style.css
+++ b/new/static/css/style.css
@@ -380,3 +380,20 @@ th {
 	background-color: #d6d6d6;
 	border-width: 4px;
 }
+
+#email{
+	width:250px;
+}
+
+#email div{
+	height: 75px;
+}
+
+#email span{
+	float:left;
+}
+
+#email input{
+	float:right;
+	width:115px;
+}
