--- a/new/views/index.html
+++ b/new/views/index.html
@@ -227,7 +227,7 @@
           <div class="footerC">
             
             <a href="https://www.instagram.com/explore/locations/226405091/dover-high-school-new-hampshire?hl=en"><i id="socialmedia" class="fab fa-instagram"></i></a> <a href="https://twitter.com/yearbookdhs2018"><i id="socialmedia" class="fab fa-twitter-square"></i></a> <a href="https://www.facebook.com/pages/Dover-High-School-New-Hampshire/107908662564829"><i id="socialmedia" class="fab fa-facebook"></i></a>  <a href="https://www.youtube.com/watch?v=ZkHb3a6G3gk"><i id="socialmedia" class="fab fa-youtube"></i></a>
-            <p class="footerText"> 25 Alumni Drive, Dover, NH 03820<br> 603-516-6900 <br> Fax: 603-516-6926 </p>
+            <p class="footerText"> 25 Alumni Drive, Dover, NH 03820<br> 603-516-6900 <br> Fax: 603-516-6926 <br><a href="./?page=sendEmail">Contact Us!</a></p>
           </div>
         </div>
       </div>
