getting rid of errors

--- a/new/views/news_scroll.html
+++ b/new/views/news_scroll.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body style="border: hidden;border-width: 7px" onMouseover="scrollspeed=0" onMouseout="scrollspeed=current" OnLoad="NewsScrollStart();">
+<body style="border: hidden;border-width: 7px">
 
 <div style="background-color: white;border-radius: 5px;">
 <h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">Class of 2019 Graduation Date is set!</h3>
