--- a/new/views/index.html
+++ b/new/views/index.html
@@ -4,17 +4,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Dover Community Outreach Network</title>
 	
-	<!--JQUERY AND JQUERY-UI-->
+	<!--JQUERY-->
 	<script src="../app/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../app/jquery-ui.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../app/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
-	
-	<link src="../app/jquery-ui.css" type="text/css" rel="stylesheet">
-	<link src="../app/jquery-ui.min.css" type="text/css" rel="stylesheet">
-	<link src="../app/jquery-ui.structure.css" type="text/css" rel="stylesheet">
-	<link src="../app/jquery-ui.structure.min.css" type="text/css" rel="stylesheet">
-	<link src="../app/jquery-ui.theme.css" type="text/css" rel="stylesheet">
-	<link src="../app/jquery-ui.theme.min.css" type="text/css" rel="stylesheet">
 	<!--END JQUERY-->
 	
 	<script src="../static/js/control.js" type="text/javascript" charset="utf-8"></script>
