--- a/new/views/news_scroll.html
+++ b/new/views/news_scroll.html
@@ -9,20 +9,68 @@
 
 </head>
 
-<body style="border: hidden;border-width: 7px">
+<body style="border: hidden;border-width: 7px" onMouseover="scrollspeed=0" onMouseout="scrollspeed=current" OnLoad="NewsScrollStart();">
 
 <div style="background-color: white;border-radius: 5px;">
-<h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">Class of 2019 Graduation Date is set!</h3>
-<p style="text-align: left; padding: 5px;">Graduation for the Class of 2019 will be held on Wednesday, June 12th at 7 p.m. at the Whittemore Center on the campus of the University of New Hampshire. Seniors will receive more information at a later date.</p>
+<h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">wasdwasdTuesday!</h3>
+<p style="text-align: left; padding: 5px;">There is no school on tuesday! Yay! There is indeed a whole lot of snow.</p>
 </div>
 <div style="background-color: rgb(158, 155, 152);border-radius: 5px;">
-<h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">Two 1,000 Point Scorers in One Night!!</h3>
-<p style="text-align: left; padding: 5px;">Katrina Krenzer scored her 1,000th point in basketball recently and on that same night, Ty Vitko scored his 1,000 point as well! Congrats to you both on this big accomplishment!</p>
+<h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">Snow Day on Tuesday!</h3>
+<p style="text-align: left; padding: 5px;">There is no school on tuesday! Yay! There is indeed a whole lot of snow.</p>
 </div>
 <div style="background-color: rgb(255, 255, 255);border-radius: 5px;">
-<h3 style="	font-size: 15px;padding: 10px;padding-top: 10px;">Teacher Workshop Day -- No School for Students!</h3>
-<p style="text-align: left; padding: 10px;"> May 24.</p>
+<h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">Snow Day on Tuesday!</h3>
+<p style="text-align: left; padding: 5px;">There is no school on Tuesday! Yay! There is indeed a whole lot of snow.</p>
 </div>
 
+<!-- YOU DO NOT NEED TO EDIT BELOW THIS LINE -->
 
+<script type="text/javascript">
+
+
+var startdelay 		= .01; 		// START SCROLLING DELAY IN SECONDS
+var scrollspeed		= 1.1;		// ADJUST SCROLL SPEED
+var scrollwind		= 1;		// FRAME START ADJUST
+var speedjump		= 30;		// ADJUST SCROLL JUMPING = RANGE 20 TO 40
+var nextdelay		= 0; 		// SECOND SCROLL DELAY IN SECONDS 0 = QUICKEST
+var topspace		= "2px";	// TOP SPACING FIRST TIME SCROLLING
+var frameheight		= 176;		// IF YOU RESIZE THE CSS HEIGHT, EDIT THIS HEIGHT TO MATCH
+
+
+current = (scrollspeed);
+
+
+function HeightData(){
+AreaHeight=dataobj.offsetHeight
+if (AreaHeight===0){
+setTimeout("HeightData()",( startdelay * 1000 ))
+}
+else {
+ScrollNewsDiv()
+}}
+
+function NewsScrollStart(){
+dataobj=document.all? document.all.NewsDiv : document.getElementById("NewsDiv")
+dataobj.style.top=topspace
+setTimeout("HeightData()",( startdelay * 1000 ))
+}
+
+function ScrollNewsDiv(){
+dataobj.style.top=scrollwind+'px';
+scrollwind-=scrollspeed;
+if (parseInt(dataobj.style.top)<AreaHeight*(-1)) {
+dataobj.style.top=frameheight+'px';
+scrollwind=frameheight;
+setTimeout("ScrollNewsDiv()",( nextdelay * 1000 ))
+}
+else {
+setTimeout("ScrollNewsDiv()",speedjump)
+}}
+
+
+</script>
+
+
+</body>
 </html>
