--- a/new/views/news_scroll.html
+++ b/new/views/news_scroll.html
@@ -22,6 +22,6 @@
 <h3 style="	font-size: 15px;padding-left: 10px;padding-top: 10px;">NH Youth Behavior Survey (YRBS) </h3>
 <p style="text-align: left; padding: 5px;">On Thursday, April 11, 2019 Dover High School will be participating in the 2019 New Hampshire Youth Behavior Survey (YRBS) designed by the Center for Disease Control (CDC). Students in grades 9 through 12 are eligible to participate in this research survey which asks about vehicle safety, bullying, violence, mental health, tobacco, alcohol and drug use, sexual behaviors, and nutrition and physical activity. </p>
 </div>
-
+</body>
 
 </html>
